customerpanel, customer signin POST route with jwt token edited

--- a/coding/Backend/customer/customer/template/activated_account.html
+++ b/coding/Backend/customer/customer/template/activated_account.html
@@ -54,7 +54,7 @@
     </div>
 
 <script>
-    alert('successfully acitveted account')
+   alert('successfully activated account')
 </script>
 </body>
 </html>
