--- a/Tushar/frontend/src/app/admin/vendor-add/vendor-add.component.html
+++ b/Tushar/frontend/src/app/admin/vendor-add/vendor-add.component.html
@@ -1,3 +1,54 @@
+<section class="header">
+  <div class="row header-div">
+
+    <div class="logo col-md-1">
+      <img src="../../../assets/logo.png" alt="">
+    </div>
+
+    <div class="col-md-11">
+
+      <h2 class="project-name" style="text-align: center;"> Garage Management System </h2>
+
+      <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+        <div class="container-fluid">
+
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a routerLink="/admin/home" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item" style="margin-left: 100px;">
+                <a routerLink="/admin/vendor-list" class="nav-link" href="#">Vendor Management</a>
+              </li>
+              <li class="nav-item" style="margin-left: 100px;">
+                <a routerLink="/admin/feedback" class="nav-link">FeedBack</a>
+              </li>
+              <li class="nav-item" style="margin-left: 100px;">
+                <a routerLink="/admin/profile" class="nav-link">Profile</a>
+              </li>
+              <li (click)="onLogout()" class="nav-item" style="margin-left: 100px;">
+                <a class="nav-link">Logout</a>
+              </li>
+            </ul>
+          </div>
+
+        </div>
+      </nav>
+
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
 <p>vendor-add works!</p>
 <div class="card">
     <div class="card-header">
@@ -17,7 +68,8 @@
           <div class="col-md-6">
             <div class="form-group">
               <label for="">Email</label>
-              <input [(ngModel)]="email" type="email" class="form-control">
+              <input *ngIf = "vendor" [(ngModel)]="email" type="email" class="form-control" readonly>
+              <input *ngIf = "!vendor" [(ngModel)]="email" type="email" class="form-control" >            
             </div>
           </div>
   
@@ -25,7 +77,8 @@
         <div class="col-md-6">
           <div class="form-group">
             <label for="">Password</label>
-            <input [(ngModel)]="password" type="password" class="form-control">
+            <input *ngIf = "vendor" [(ngModel)]="password" type="password" class="form-control" readonly>
+            <input *ngIf = "!vendor" [(ngModel)]="password" type="password" class="form-control">    
           </div>
         </div>
 
